--- a/E5/Latex/analisi.tex
+++ b/E5/Latex/analisi.tex
@@ -14,8 +14,8 @@ Poiché la pompa turbomolecolare ha bisogno di una decina di minuti per fermarsi
 \end{itemize}
 
 Per calcolare la velocità di pompaggio della pompa turbomolecolare abbiamo seguito lo stesso procedimento descritto sopra fatta eccezione che in questo caso il baypass non era attivo, in quanto il vuoto in camera è effettuato mediante la pompa turbolecolare.
-Un'altra differenza tra le due procedure risiede nel numero di giri della vite micrometrica che si sono fatti. Per la pompa rotativa siamo partiti da quattro giri della valvola a spillo fino ad arrivare al nono giro. Per la pompa turbomolecolare invece siamo partiti con un flusso di gas equivalnte ad un giro di valvola a spillo e siamo arrivati fino a sei giri di valvola. Facciamo notare che per la pompa turbomolecolare non è stato possibile fare ulteriori misure con un numero più elevato di giri in quanto la pressione in camera sarebbe risultata troppo elevata per il corretto funzionamento della pompa turbo, che lavora correttamnte in regime molecolare ovvero a pressioni inferiori a qualche Pascal.
-Infine è doveroso sottolineare che per misurare la pressione in camera, quando era in azione la pompa turbomolecolare, non ci siamo più potuti avvalere el sistema di aquisizione dati connesso ai vacuometri Pirani, ma abbiamo douto utilizzare il vacuometro a catodo freddo, Penning. Quindi la lettura della pressione è stata presa una volta che questa sembrava essersi stabilizzata e quindi non vi erano repentine variazioni della misura.  
+Un'altra differenza tra le due procedure risiede nel numero di giri della vite micrometrica che si sono fatti. Per la pompa rotativa siamo partiti da quattro giri della valvola a spillo fino ad arrivare al nono giro. Per la pompa turbomolecolare invece siamo partiti con un flusso di gas equivalnte ad un giro di valvola a spillo e siamo arrivati fino a sei giri di valvola. Facciamo notare che per la pompa turbomolecolare non è stato possibile fare ulteriori misure con un numero più elevato di giri in quanto la pressione in camera sarebbe risultata troppo elevata per il corretto funzionamento della pompa turbomolecolare, che lavora correttamnte in regime molecolare ovvero a pressioni inferiori a qualche Pascal.
+Infine è doveroso sottolineare che per misurare la pressione in camera, quando era in azione la pompa turbomolecolare, non ci siamo più potuti avvalere del sistema di aquisizione dati connesso ai vacuometri Pirani, ma abbiamo douto utilizzare il vacuometro a catodo freddo Penning. Quindi la lettura della pressione è stata presa una volta che questa sembrava essersi stabilizzata e quindi non vi erano repentine variazioni della misura.  
 
 \section{Analisi dati}
 
@@ -44,7 +44,6 @@ Tra i motivi che possono incidere su queste discrepanze fra i valori sperimental
 \begin{itemize}
 	\item{l'usura della pompa stessa che porta ad una minore efficienza;}
 	\item{i valori forniti dal costruttore si riferisce alla velocità di pompaggio alla bocca della pompa e non tengono conto della conduttanza delle canalizzazioni tra i vari componenti dell'impianto da vuoto. Tale differenza è particolarmente evidente soprattutto per la pompa rotativa. Infatti questa non era collegata direttamente alla camera da vuoto come lo era la pompa turbomolecolare, ma tramite un tubo di circa un metro di lunghezza;}%stimiamo la conduttanza???
-	\item{wf}
 \end{itemize}
 
 \input{tab.tex}
