--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -1,7 +1,7 @@
 \begin{table}
     \begin{tabular}{l c c c c c c}
         \toprule
-        Nr. giri & $Q$ & $\sigma (Q)$ & $S\ped{rotativa}$ & $\sigma (S\ped{rotativa})$ & $\ped{ma}S\ped{turbo}$ & $\sigma (\ped{ma}S\ped{turbo})$ \\
+        Nr. giri & $Q$ & $\sigma (Q)$ & $S\ped{rotativa}$ & $\sigma (S\ped{rotativa})$ & $S\ped{turbo}$ & $\sigma (S\ped{turbo})$ \\
 
         & $[\si{\Pa\cubic\meter\per\second}]$ & $[\si{\Pa\cubic\meter\per\second}]$ &
         $[\si{\cubic\deci\meter\per\second}]$ & $[\si{\cubic\deci\meter\per\second}]$ &
