--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -1,4 +1,5 @@
 \begin{table}
+    \centering
     \begin{tabular}{l c c c c c c}
         \toprule
         Nr. giri & $Q$ & $\sigma (Q)$ & $S\ped{rotativa}$ & $\sigma (S\ped{rotativa})$ & $S\ped{turbo}$ & $\sigma (S\ped{turbo})$ \\
@@ -12,7 +13,7 @@
         2   & 1.38  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &      &      & 29 & 3 \\
         3   & 1.63  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &      &      & 33 & 3 \\
         4   & 3.07  $\times \, 10^{-4}$ & 0.03 $\times \, 10^{-4}$    & 0.13 & 0.01 & 36 & 4 \\
-        5   & 1.04  $\times \, 10^{-3}$ & 0.01 $\times \, \, 10^{-3}$ & 0.32 & 0.03 & 40 & 4 \\
+        5   & 1.04  $\times \, 10^{-3}$ & 0.01 $\times \, 10^{-3}$ & 0.32 & 0.03 & 40 & 4 \\
         5.2 & 1.307 $\times \, 10^{-3}$ & 0.008 $\times \, 10^{-3}$   & 0.35 & 0.04 & 41 & 4 \\
         5.4 & 1.84  $\times \, 10^{-3}$ & 0.01 $\times \, 10^{-3}$    & 0.41 & 0.04 & 44 & 4 \\
         5.6 & 2.60  $\times \, 10^{-3}$ & 0.02 $\times \, 10^{-3}$    & 0.48 & 0.05 & 47 & 5 \\
@@ -23,4 +24,8 @@
         9   & 2.99                      & 0.07                        & 1.8  & 0.2  &    &   \\
         \bottomrule
     \end{tabular}
+    \label{tab:speed}
+    \caption{La tabella riassume i risultati dell'analisi dati. Sono riportati i valore di flusso per varie aperture della
+    valvola a spillo, calcolati nell'esperienza precedente, ed i valori, con relativa incertezza, della velocità di pompaggio di
+    entrambe le pompe da noi usate.}
 \end{table}
