--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -25,7 +25,7 @@
         \bottomrule
     \end{tabular}
     \label{tab:speed}
-    \caption{La tabella riassume i risultati dell'analisi dati. Sono riportati i valore di flusso per varie aperture della
+    \caption{La tabella riassume i risultati dell'analisi dati. Sono riportati i valori di flusso per varie aperture della
     valvola a spillo, calcolati nell'esperienza precedente, ed i valori, con relativa incertezza, della velocità di pompaggio di
     entrambe le pompe da noi usate.}
 \end{table}
