--- a/E5/Latex/analisi.tex
+++ b/E5/Latex/analisi.tex
@@ -1,21 +1,38 @@
 \section{Esecuzione}
 
 Avendo a disposizione due tipi di pompe da vuoto, abbiamo deciso di ricavare la velocità di pompaggio per entrambi gli strumenti.
+Poiché la pompa turbomolecolare ha bisogno di una decina di minuti per fermarsi abbiamo cominciato le misure con la pompa rotativa,
+misurando solo in un secondo momento la velocità di pompaggio della turbomolecolare.
 
-Poiché la pompa turbomolecolare ha bisogno di una decina di minuti per fermarsi abbiamo cominciato le misure con la pompa rotativa. Qundi, per calcolarne la velocità di pompaggio ci siamo mossi come segue:
+Quindi, per calcolarne la velocità di pompaggio della pompa rotativa, ci siamo mossi come segue:
 
-\begin{itemize}
-	\item{abbiamo isolato la pompa turbomolecolare;}
-	\item{grazie al baypass abbiamo svuotato la camera da vuoto fino alla pressione limite della pompa rotativa, cioè una pressione di qualche Pascal;}
-	\item{successivamente abbiamo prodotto mediante l'utilizzo della valvola a spillo un flusso costante di gas all'interno della camera da vuoto. Questo e stato possibile girando un numero opportuno di vote la vite micrometrica della valvola;}
-	\item{quindi grazie al sistema di acquisiziione dati abbiamo registrato l'andamento della pressione interna alla camera in funzione del tempo. I dati sono stati presi finchè la curva non ha assunto una configurazine asintotica, ovvero fino a che la pressione in camera non si è stabilizzata attorno ad un valore costante;}
-	\item{una volta che la pressione in camera si è stabilizzata, abbiamo svitato la vite micrometrica della valvola a spillo di un ulteriore giro e abbiamo registrato la variazione della pressione interna della camera in funzone del tempo;}
-	\item{abbiamo ripetuto quest'ultimo passaggio fino a che la vite micrometrica non è stata svitata di 9 tornate;} %qualche dubbio
-\end{itemize}
+\begin{enumerate}
+	\item{Abbiamo chiuso la bocca della pompa turbomolecolare, lasciando aperta l'uscita,
+        in modo che anche l'aria all'interno della pompa venisse rimossa;}
+	\item{Grazie al bypass abbiamo svuotato la camera da vuoto fino alla pressione limite della pompa rotativa, cioè una pressione di qualche Pascal;}
+	\item{Successivamente abbiamo prodotto, mediante l'utilizzo della valvola a spillo un flusso costante di gas all'interno della camera da vuoto. Questo è stato possibile girando un numero opportuno di volte la vite micrometrica della valvola;}
+	\item{Quindi grazie al sistema di acquisizione dati, è stato registrato l'andamento della pressione interna alla camera in funzione del tempo.  Si è atteso che il valore di pressione all'interno della camera si stabilizzasse su un valore costante;}
+	\item{Si sono ripetuti i passi 3) e 4) per tutti i valori di flusso da misurare.}
+\end{enumerate}
 
-Per calcolare la velocità di pompaggio della pompa turbomolecolare abbiamo seguito lo stesso procedimento descritto sopra fatta eccezione che in questo caso il baypass non era attivo, in quanto il vuoto in camera è effettuato mediante la pompa turbolecolare.
-Un'altra differenza tra le due procedure risiede nel numero di giri della vite micrometrica che si sono fatti. Per la pompa rotativa siamo partiti da quattro giri della valvola a spillo fino ad arrivare al nono giro. Per la pompa turbomolecolare invece siamo partiti con un flusso di gas equivalnte ad un giro di valvola a spillo e siamo arrivati fino a sei giri di valvola. Facciamo notare che per la pompa turbomolecolare non è stato possibile fare ulteriori misure con un numero più elevato di giri in quanto la pressione in camera sarebbe risultata troppo elevata per il corretto funzionamento della pompa turbomolecolare, che lavora correttamnte in regime molecolare ovvero a pressioni inferiori a qualche Pascal.
-Infine è doveroso sottolineare che per misurare la pressione in camera, quando era in azione la pompa turbomolecolare, non ci siamo più potuti avvalere del sistema di aquisizione dati connesso ai vacuometri Pirani, ma abbiamo douto utilizzare il vacuometro a catodo freddo Penning. Quindi la lettura della pressione è stata presa una volta che questa sembrava essersi stabilizzata e quindi non vi erano repentine variazioni della misura.  
+Per calcolare la velocità di pompaggio della pompa turbomolecolare abbiamo seguito lo stesso procedimento
+descritto sopra fatta eccezione che in questo caso il baypass non era attivo. In tal caso, chiaramente,
+si è raggiunto il vuoto limite della turbomolecolare prima di iniziare le misure.
+
+Un'altra differenza tra le procedure seguite per le differenti pompe risiede nei flussi che abbiamo deciso di misurare.
+Mentre nel caso della pompa rotativa abbiamo misurato le pressioni limite aprendo la valvola a spillo da 4 a 9 giri,
+per la pompa turbomolecolare siamo partiti da un solo giro fino a 6 giri di valvola.
+Infatti la pompa rotativa ha una pressione di vuoto limite alta, che non avrebbe permesso
+una corretta misura della velocità di pompaggio per flussi troppo piccoli (come si vede bene dal grafico
+riportato nella sezione di analisi dati), come quelli ottenibili per .
+Facciamo notare che per la pompa turbomolecolare non è stato possibile fare ulteriori misure
+con un numero più elevato di giri in quanto la pressione in camera sarebbe risultata troppo elevata per il corretto
+funzionamento della pompa turbomolecolare, che lavora correttamnte in regime molecolare ovvero a pressioni inferiori a qualche Pascal.
+
+Infine è doveroso sottolineare che per misurare la pressione in camera, quando era in azione la pompa turbomolecolare,
+non ci siamo più potuti avvalere del sistema di aquisizione dati connesso ai vacuometri Pirani, ma abbiamo douto utilizzare
+il vacuometro a catodo freddo Penning. Quindi la lettura della pressione è stata presa una volta che questa sembrava
+essersi stabilizzata e quindi non vi erano repentine variazioni della misura.  
 
 \begin{figure}[b!]
 	\centering
