--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -1,10 +1,10 @@
 \section{Esecuzione}
 
-La prima operazione da noi fatta è stata quella di mettere in moto l'impianto da vuoto portando la camera a una pressione di $10^{-3}$ \si{\pascal}, avendo cura di controllare la pressione raggiunta con il vacuometro a catodo freddo.
+La prima operazione da noi fatta è stata quella di mettere in moto l'impianto da vuoto portando la camera a una pressione attorno a $10^{-3}$ \si{\pascal}, attorno al vuoto limite del notro impianto. Abbiamo usato il vacuometro a catodo freddo, per controllare il raggiungimento del vuoto limite.
 
-In seguito abbiamo misurato l'andamento della pressione interna della camera da vuoto in funzione del tempo con la valvola a spillo completamente chiusa. Ciò è necessario per misurare la variazione della pressione in camera che, una volta isolata dalla pompa turbomolecolare e dal resto dell'impianto, è dovuta ai soli effetti di degasamento.
+In seguito abbiamo isolato la camera da vuoto chiudendo la valvola gate dalla turbomolecolare. Quindi è stato misurato, tramite il vacuometro pirani connesso alla camera, l'andamento della pressione interna con la valvola a spillo completamente chiusa. Ciò è necessario per misurare la variazione della pressione in camera nel tempo, che in queste condizioni, è dovuta ai soli effetti di degasamento. Questa misura è utile poiché nelle misure successive, volendo ricavare solo il flusso relativo alla valvola a spillo, è opportuno eliminare il contributo dovuto al degasamento. 
 
-Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad una pressione interna di $10^{-3}$ \si{\pascal} e per misurare il flusso in entrata a seconda dell'apertura della valvola abbiamo osservato la seguente procedura:
+Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad una pressione interna di circa $10^{-3}$ \si{\pascal}. Per ogni valore di apertura della valvola, al fine di misurare il flusso in entrata, abbiamo osservato la seguente procedura:
 \begin{itemize}
 	\item{portare la camera da vuoto\footnote{La valvola a spillo presenta al suo interno un volume morto di aria a pressione atmosferica che, se ignorato, renderebbe scorrette le misure. Per ovviare a questo problema abbiamo chiuso la valvola con un tappo e un O-ring in viton e non con la manopola della stessa, in modo tale da rendere il volume morto parte della camera e quindi avere ovunque la stessa pressione misurata dal vacuometro a catodo freddo.} ad una pressione di circa $10^{-3}$ \si{\pascal}, controllando con il vacuometro a catodo freddo di essere ad una pressione minore del fondoscala del vacuometro Pirani;}
 	\item{spegnere il vacuometro a catodo freddo per evitare l'usura o il deterioramento dello stesso a causa dell'aumento di pressione;}
