--- a/E4/Latex/introduzione.tex
+++ b/E4/Latex/introduzione.tex
@@ -1,6 +1,6 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{fine controlling needle valve}) ricavando il flusso (o per meglio dire la portata) in ingresso da misure di pressione della camera da vuoto, a seconda dell'apertura della valvola (misurata in numero di giri).
+Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{fine controlling needle valve}) ricavando il flusso in ingresso per diversi valori di apertura della valvola (misurata in numero di giri). Ciò è stato ottenuto da misure di pressione della camera da vuoto. Facciamo notare che useremo la parola ``flusso'' anche se sarebbe più appropiato dire ``portata''.
 
 \section{Materiale utilizzato}
 
@@ -8,5 +8,5 @@ Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{
 	\item{sistema da vuoto costituito da una camera di volume $V = 5930 \pm 10$ \si{\centi\metre}$^3$, una pompa rotativa, una pompa ibrida turbomolecolare-molecular drag connessi in modo opportuno;}
 	\item{valvola a spillo con regolazione micrometrica;}
 	\item{multimetro e sistema di acquisizione dati;}
-	\item{2 vacuometri Pirani;}
+	\item{2 vacuometri Pirani, uno in fondo alla pompa turbomolecolare e l'altro connesso alla camera da vuoto;}
 \end{itemize}
