--- a/E5/Latex/tab.tex
+++ b/E5/Latex/tab.tex
@@ -1,4 +1,4 @@
-\begin{table}
+\begin{table}[b!]
     \centering
     \begin{tabular}{l c c c c c c}
         \toprule
@@ -9,9 +9,9 @@
         $[\si{\cubic\deci\meter\per\second}]$ & $[\si{\cubic\deci\meter\per\second}]$ \\
 
         \midrule
-        1   & 1.40  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &      &      & 29 & 3 \\
-        2   & 1.38  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &      &      & 29 & 3 \\
-        3   & 1.63  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &      &      & 33 & 3 \\
+        1   & 1.40  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &   -  &   -  & 29 & 3 \\
+        2   & 1.38  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &   -  &   -  & 29 & 3 \\
+        3   & 1.63  $\times \, 10^{-4}$ & 0.02 $\times \, 10^{-4}$    &   -  &   -  & 33 & 3 \\
         4   & 3.07  $\times \, 10^{-4}$ & 0.03 $\times \, 10^{-4}$    & 0.13 & 0.01 & 36 & 4 \\
         5   & 1.04  $\times \, 10^{-3}$ & 0.01 $\times \, 10^{-3}$ & 0.32 & 0.03 & 40 & 4 \\
         5.2 & 1.307 $\times \, 10^{-3}$ & 0.008 $\times \, 10^{-3}$   & 0.35 & 0.04 & 41 & 4 \\
@@ -19,13 +19,13 @@
         5.6 & 2.60  $\times \, 10^{-3}$ & 0.02 $\times \, 10^{-3}$    & 0.48 & 0.05 & 47 & 5 \\
         5.8 & 4.36  $\times \, 10^{-3}$ & 0.03 $\times \, 10^{-3}$    & 0.59 & 0.06 & 48 & 5 \\
         6   & 9.6   $\times \, 10^{-3}$ & 0.1 $\times \, 10^{-3}$     & 0.76 & 0.08 & 46 & 5 \\
-        7   & 6.52  $\times \, 10^{-2}$ & 0.06 $\times \, 10^{-2}$    & 1.4  & 0.1  &    &   \\
-        8   & 0.412                     & 0.006                       & 1.8  & 0.2  &    &   \\
-        9   & 2.99                      & 0.07                        & 1.8  & 0.2  &    &   \\
+        7   & 6.52  $\times \, 10^{-2}$ & 0.06 $\times \, 10^{-2}$    & 1.4  & 0.1  &  -  & -  \\
+        8   & 0.412                     & 0.006                       & 1.8  & 0.2  &  -  &  - \\
+        9   & 2.99                      & 0.07                        & 1.8  & 0.2  &  -  &  - \\
         \bottomrule
     \end{tabular}
-    \label{tab:speed}
     \caption{La tabella riassume i risultati dell'analisi dati. Sono riportati i valori di flusso per varie aperture della
     valvola a spillo, calcolati nell'esperienza precedente, ed i valori, con relativa incertezza, della velocità di pompaggio di
     entrambe le pompe da noi usate.}
+    \label{tab:speed}
 \end{table}
