--- a/E4/Latex/introduzione.tex
+++ b/E4/Latex/introduzione.tex
@@ -1,6 +1,6 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{fine controlling needle valve}) ricavando il flusso in ingresso per diversi valori di apertura della valvola (misurata in numero di giri). Ciò è stato ottenuto da misure di pressione della camera da vuoto. Facciamo notare che useremo la parola ``flusso'' anche se sarebbe più appropiato dire ``portata''.
+Lo scopo di questa esperienza è quello di tarare una valvola a spillo (\textit{fine controlling needle valve}) ricavando il flusso in ingresso per diversi valori di apertura della valvola (misurata in numero di giri). Ciò è stato ottenuto da misure di pressione della camera da vuoto.
 
 \section{Materiale utilizzato}
 
