--- a/E4/Latex/title.tex
+++ b/E4/Latex/title.tex
@@ -1,14 +1,13 @@
 \begin{center}
 
-	\vspace{0.5cm}
      	{\huge Taratura di una valvola a spillo}
-	\vspace{0.5cm}
+	\vspace{0.3cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
-      	{francescopasa@gmail.com, Bazzanella.Davide@gmail.com} \\
+      	{Bazzanella.Davide@gmail.com} \\
 		{\large Gruppo A6} \\
 	
-	\vspace{0.3cm}
+	\vspace{0.2cm}
       	{\large 14 ottobre 2013}
     
     \vspace{0cm}
