--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -1,23 +1,36 @@
 \section{Esecuzione}
 
-La prima operazione da noi fatta è stata quella di mettere in moto l'impianto da vuoto portando la camera a una pressione attorno a $10^{-3}$ \si{\pascal}, attorno al vuoto limite del notro impianto. Abbiamo usato il vacuometro a catodo freddo, per controllare il raggiungimento del vuoto limite.
+La prima operazione da noi fatta è stata quella di mettere in moto l'impianto da vuoto portando la camera a una pressione attorno a $10^{-3}$ \si{\pascal}, attorno al vuoto limite del nostro impianto. Abbiamo usato il vacuometro a catodo freddo per controllare il raggiungimento del vuoto limite.
 
 In seguito abbiamo isolato la camera da vuoto chiudendo la valvola gate dalla turbomolecolare. Quindi è stato misurato, tramite il vacuometro pirani connesso alla camera, l'andamento della pressione interna con la valvola a spillo completamente chiusa. Ciò è necessario per misurare la variazione della pressione in camera nel tempo, che in queste condizioni, è dovuta ai soli effetti di degasamento. Questa misura è utile poiché nelle misure successive, volendo ricavare solo il flusso relativo alla valvola a spillo, è opportuno eliminare il contributo dovuto al degasamento. 
 
 Una volta eseguita questa prima serie di misure abbiamo riportato la camera ad una pressione interna di circa $10^{-3}$ \si{\pascal}. Per ogni valore di apertura della valvola, al fine di misurare il flusso in entrata, abbiamo osservato la seguente procedura:
 \begin{itemize}
-	\item{portare la camera da vuoto\footnote{La valvola a spillo presenta al suo interno un volume morto di aria a pressione atmosferica che, se ignorato, renderebbe scorrette le misure. Per ovviare a questo problema abbiamo chiuso la valvola con un tappo e un O-ring in viton e non con la manopola della stessa, in modo tale da rendere il volume morto parte della camera e quindi avere ovunque la stessa pressione misurata dal vacuometro a catodo freddo.} ad una pressione di circa $10^{-3}$ \si{\pascal}, controllando con il vacuometro a catodo freddo di essere ad una pressione minore del fondoscala del vacuometro Pirani;}
-	\item{spegnere il vacuometro a catodo freddo per evitare l'usura o il deterioramento dello stesso a causa dell'aumento di pressione;}
-	\item{isolare la camera da vuoto e aprire la valvola a spillo del numero di giri voluto;}
-	\item{togliere il tappo posto a chiusura della valvola a spillo e misurare, tramite il multimetro e il sistema di acquisizione dati, il variare della pressione interna della camera in funzione del tempo;}
-	\item{infine riportare la camera da vuoto ad una pressione dell'ordine $10^{-3}$ \si{\pascal}, isolando la pompa turbomolecolare e usando quella rotativa qualora necessario, cioè per pressioni superiori a qualche Pa;}
+	\item{Si è portata la camera da vuoto\footnote{La valvola a spillo comprende una valvola ausiliaria posta in serie
+	alla valvola a vite micrometrica. Tra le due valvole è presente un volume morto, che, se si chiude la valvola ausiliaria
+	durante il pompaggio, contiene gas a pressione atmosferica. L'effetto di questo volume di gas, se ignorato, renderebbe
+	scorrette le misure. Per ovviare a questo problema abbiamo chiuso la valvola con un tappo e un O-ring in viton e abbiamo
+	lasciato aperta la valvola ausiliaria, in modo tale da rendere il volume morto parte della camera e quindi avere ovunque
+	la stessa pressione misurata dal vacuometro a catodo freddo.} ad una pressione di circa $10^{-3}$ \si{\pascal},
+	controllando con il vacuometro a catodo freddo di essere ad una pressione minore del fondoscala del vacuometro Pirani;}
+	\item{È stato spento il vacuometro a catodo freddo per evitare l'usura o il deterioramento dello stesso a causa dell'aumento di pressione.
+	In pratica tale sensore è stato usato solo per vedere se si era giunti a pressione limite, quando la pressione era scesa sotto
+	il fondoscala del pirani;}
+	\item{Si è isolata la camera da vuoto, chiudendo la valvola gate, e la valvola a spillo è stata aperta del numero di giri voluto;}
+	\item{È stato tolto il tappo posto a chiusura della valvola a spillo. Si è poi misurato, tramite il multimetro e il sistema di acquisizione dati, il variare della pressione interna della camera in funzione del tempo;}
+	\item{Infine la camera da vuoto è stata riportata ad una pressione dell'ordine $10^{-3}$ \si{\pascal}. Nel caso in cui le pressioni
+	in camera avessero superato qualche \si{\Pa} di pressione, è stata usata prima la rotativa tramite il bypass, e poi la turbomolecolare.
+	Nel caso la pressione finale fosse inferiore al Pascal, abbiamo usato direttamente la turbomolecolare;}
 \end{itemize}
-Mentre la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, le misure successive sono servite ad ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri completi e di 5.2, 5.4, 5.6 e 5.8 giri.\\
+
+Come già detto la prima serie di misure è stata fatta con la valvola a spillo completamente chiusa, per misurare il degasamento.
+Le misure successive sono servite ad ottenere i dati di flusso per un'apertura della valvola da 1 a 9 giri della vite micrometrica.
+Inoltre è stato misurato l'andamento della pressione nel tempo per aperture di 5.2, 5.4, 5.6 e 5.8 giri.
 
 Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $294 \pm 0.5$ \si{\kelvin}, una pressione atmosferica di $981 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%. Le incertezze di queste ultimi dati sono di risoluzione.
 
 \begin{figure}[h!]
-    \includegraphics[width=15cm]{graph.pdf}
+    \includegraphics[width=14cm]{graph.pdf}
     \caption{Il grafico mostra i valori elaborati del flusso in entrata a seconda dell'apertura della valvola a spillo. Le barre d'errore non sono
     mostrate in quanto comparabili con la dimensione dei punti sul grafico. L'asse delle ordinate ha scala logaritmica.}
     \label{fig:graph}
@@ -25,35 +38,32 @@ Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svol
 
 \section{Analisi dati}
 
-Per ogni serie di dati abbiamo ricavato, con il metodo della regressione lineare, un valore della variazione di pressione $\frac{dP}{dt}$. Grazie a questi dati abbiamo poi potuto ottenere una stima del flusso in entrata grazie alla seguente relazione:
+Con la procedura descritta sopra, per ogni valore di apertura è stata ottenuta una serie di dati di pressione.
+Gli andamenti ottenuti erano in buona approssimazione lineari, come ci si può aspettare, poiché i flussi in ingresso erano costanti.
+Abbiamo registrato un andamento lineare anche nel caso della misura del degasamento.
+Dai dati abbiamo ricavato, con il metodo della regressione lineare, il valore $\frac{dP}{dt}$ di pendenza di ogni serie di dati.
+Grazie a questi dati si può ottenere una stima del flusso in entrata grazie alla seguente relazione:
 
 \begin{equation}
 	Q_{tot} \,\, = \,\, V \frac{dP}{dt}
 \end{equation}
 
-Bisogna prestare attenzione che il flusso calcolato ($Q_{tot}$) grazie alla precedente equazione rappresenta il contributo di due differenti fattori: uno è dovuto alla perdita controllata di gas da parte della valvola a spillo ($Q_{valve}$), mentre il secondo è opera degli effetti di degasamento della camera da vuoto e delle altre parti dell'impianto ($Q_{deg}$).
+Bisogna prestare attenzione che il flusso $Q_{tot}$ nella precedente equazione rappresenta il contributo di due differenti fattori: uno è dovuto alla perdita controllata di gas da parte della valvola a spillo, che indicheremo con $Q_{valve}$, mentre il secondo è opera degli effetti di degasamento della camera da vuoto, delle altre parti dell'impianto e di eventuali perdite. Indicheremo questo secondo contributo con $Q_{deg}$.
 
-Pertanto, per ricavare Q$_{valve}$ abbiamo dovuto sottrarre al flusso totale calcolato il flusso  dovuto alle perdite intrinseche e virtuali del sistema, ovvero:
+Pertanto, per ricavare il valore Q$_{valve}$ che ci interessa, occorre sottrarre al flusso totale il flusso dovuto al degasamento:
 
 \begin{equation}
 	Q_{valve} \, = \, Q_{tot} \, - \, Q_{deg} \, = \, V \left[ \frac{dP}{dt} - \left(\frac{dP}{dt}\right)_{deg} \right]
 \end{equation}
 
-Dai dati sul flusso $Q_{valve}$ si può inoltre ricavare la conduttanza $C$ della valvola:
-
-\begin{equation}
-	Q_{valve} \, = \, C (P_{atm} - P) \quad \implies \quad C = \frac{Q_{valve}}{P_{atm} - P} = \frac{Q_{valve}}{P_{atm}}
-\end{equation}
-%
-dove $P$ è la pressione all'interno della camera e $P_{atm}$ è la pressione atmosferica. Nell'ultimo passaggio si è supposto
-che $P \ll P_{atm}$, approssimazione vera con buona precisione.
-
-I risultati numerici sono esposti nella tabella sottostante, dove sono riportati i flussi e le conduttanze della valvola ottenute.
-Nella prima riga è riportato il flusso di degasamento, e chiaramente non è presente la conduttanza.
+I risultati numerici ottenuti con questa formula, sono visibili nella Tabella \ref{tab:table}.
 
 \input{tab.tex}
 
-La tabella ed il relativo grafico in Figura \ref{fig:graph} mostrano chiaramente che l'andamento del flusso non è lineare con
+La Tabella \ref{tab:table} ed il relativo grafico in Figura \ref{fig:graph} mostrano chiaramente che l'andamento del flusso non è lineare con
 l'apertura della valvola, anzi gli ultimi punti del grafico sembrano suggerire un andamento esponenziale (che su un grafico
 con scala logaritmica come quello riportato in figura, risulta in una linea retta). Tuttavia i primi 2/3
-punti deviano in maniera vistosa da tale andamento.
+punti deviano in maniera vistosa da tale andamento. Da notare inoltre come il flusso di degasamento sia trascurabile
+anche per valori piccoli di apertura della valvola.
+
+Abbiamo quindi ricavato il flusso dovuto alla valvola a spillo per alcuni valori di apertura. Questi dati sul flusso ci saranno utili nelle prossime relazioni.
