--- a/E4/Latex/tab.tex
+++ b/E4/Latex/tab.tex
@@ -1,22 +1,22 @@
-\begin{center}
+\begin{SCtable}[0.6][b!]
 	\begin{tabular}{ l c c }
         \toprule
-        nr. giri & Q$_{valve}$ [Pa m$^3$ s$^{-1}$] & C [m$^3$ s$^{-1}$] \\ 
+        nr. giri & Q$_{valve}$ [Pa m$^3$ s$^{-1}$] \\ 
         \midrule
-        0   & (7.76 $\pm$ 0.03) $ \cdot \; 10^{-6}$ & \\
-        1   & (1.40 $\pm$ 0.02) $ \cdot \; 10^{-4}$ & (1.43 $\pm$  0.02) $ \cdot \; 10^{-9}$ \\
-        2   & (1.38 $\pm$ 0.02) $ \cdot \; 10^{-4}$ & (1.41 $\pm$  0.02) $ \cdot \; 10^{-9}$ \\
-        3   & (1.63 $\pm$ 0.02) $ \cdot \; 10^{-4}$ & (1.66 $\pm$  0.02) $ \cdot \; 10^{-9}$ \\
-        4   & (3.07 $\pm$ 0.03) $ \cdot \; 10^{-4}$ & (3.13 $\pm$  0.03) $ \cdot \; 10^{-9}$ \\
-        5   & (1.04 $\pm$ 0.01) $ \cdot \; 10^{-3}$ & (1.06 $\pm$  0.01) $ \cdot \; 10^{-8}$ \\
-        5.2 & (1.307 $\pm$ 0.008) $ \cdot \; 10^{-3}$ & (1.332 $\pm$ 0.008) $ \cdot \; 10^{-8}$ \\
-        5.4 & (1.84 $\pm$ 0.01) $ \cdot \; 10^{-3}$ & (1.88 $\pm$  0.01) $ \cdot \; 10^{-8}$ \\
-        5.6 & (2.60 $\pm$ 0.02) $ \cdot \; 10^{-3}$ & (2.65 $\pm$  0.02) $ \cdot \; 10^{-8}$ \\
-        5.8 & (4.36 $\pm$ 0.03) $ \cdot \; 10^{-3}$ & (4.45 $\pm$  0.03) $ \cdot \; 10^{-8}$ \\
-        6   &  (9.6 $\pm$ 0.1)  $ \cdot \; 10^{-3}$ & (9.8 $\pm$   0.1) $ \cdot \; 10^{-8}$ \\
-        7   & (6.52 $\pm$ 0.06) $ \cdot \; 10^{-2}$ & (6.64 $\pm$  0.06) $ \cdot \; 10^{-7}$ \\
-        8   & (4.12 $\pm$ 0.06) $ \cdot \; 10^{-2}$ & (4.20 $\pm$  0.06) $ \cdot \; 10^{-6}$ \\
-        9   & (2.99 $\pm$ 0.07) $ \cdot \; 10^{-1}$ & (3.05 $\pm$  0.07) $ \cdot \; 10^{-5}$ \\
+        0   & (7.76 $\pm$ 0.03) $ \cdot \; 10^{-6}$  \\
+        1   & (1.40 $\pm$ 0.02) $ \cdot \; 10^{-4}$  \\
+        2   & (1.38 $\pm$ 0.02) $ \cdot \; 10^{-4}$  \\
+        3   & (1.63 $\pm$ 0.02) $ \cdot \; 10^{-4}$  \\
+        4   & (3.07 $\pm$ 0.03) $ \cdot \; 10^{-4}$  \\
+        5   & (1.04 $\pm$ 0.01) $ \cdot \; 10^{-3}$  \\
+        5.2 & (1.307 $\pm$ 0.008) $ \cdot \; 10^{-3}$ \\
+        5.4 & (1.84 $\pm$ 0.01) $ \cdot \; 10^{-3}$  \\
+        5.6 & (2.60 $\pm$ 0.02) $ \cdot \; 10^{-3}$  \\
+        5.8 & (4.36 $\pm$ 0.03) $ \cdot \; 10^{-3}$  \\
+        6   &  (9.6 $\pm$ 0.1)  $ \cdot \; 10^{-3}$ \\
+        7   & (6.52 $\pm$ 0.06) $ \cdot \; 10^{-2}$  \\
+        8   & (4.12 $\pm$ 0.06) $ \cdot \; 10^{-2}$  \\
+        9   & (2.99 $\pm$ 0.07) $ \cdot \; 10^{-1}$  \\
     \bottomrule
 
 %	\begin{tabular}{ c c c c c c c c c c c c }
@@ -28,6 +28,7 @@
 %	\bottomrule
 	\end{tabular}
 	% NON SO COME INTRODURRE IL CAMPO
-%	\caption{La Tabella mostra i risultati numerici del flusso in ingresso a secona del numero di giri della valvola a spillo}
-    %\label{tab:table}
-\end{center}
+	\caption{Risultati numerici di flusso in ingresso calcolati per vari valori di apertura della valvola micrometrica. Si può notare che il flusso di degasamento è circa 20 volte inferiore
+    al flusso generato dalla valvola aperta di un solo giro, e quindi trascurabile rispetto agli altri flussi. I dati sono graficati in Figura \ref{fig:graph}}
+    \label{tab:table}
+\end{SCtable}
