--- a/E4/Latex/tab.tex
+++ b/E4/Latex/tab.tex
@@ -29,6 +29,6 @@
 	\end{tabular}
 	% NON SO COME INTRODURRE IL CAMPO
 	\caption{Risultati numerici di flusso in ingresso calcolati per vari valori di apertura della valvola micrometrica. Si può notare che il flusso di degasamento è circa 20 volte inferiore
-    al flusso generato dalla valvola aperta di un solo giro, e quindi trascurabile rispetto agli altri flussi. I dati sono graficati in Figura \ref{fig:graph}}
+    al flusso generato dalla valvola aperta di un solo giro, e quindi trascurabile rispetto agli altri flussi. I dati sono graficati in Figura \ref{fig:graph}.}
     \label{tab:table}
 \end{SCtable}
