--- a/E4/Latex/analisi.tex
+++ b/E4/Latex/analisi.tex
@@ -30,6 +30,7 @@ Inoltre è stato misurato l'andamento della pressione nel tempo per aperture di 
 Grazie alle condizioni meteorologiche stabili, l'intera esperienza è stata svolta in laboratorio ad una temperatura ambiente di $294 \pm 0.5$ \si{\kelvin}, una pressione atmosferica di $981 \pm 0.5$ hPa ed una umidità del $55 \pm 0.5$ \%. Le incertezze di queste ultimi dati sono di risoluzione.
 
 \begin{figure}[h!]
+    \centering
     \includegraphics[width=14cm]{graph.pdf}
     \caption{Il grafico mostra i valori elaborati del flusso in entrata a seconda dell'apertura della valvola a spillo. Le barre d'errore non sono
     mostrate in quanto comparabili con la dimensione dei punti sul grafico. L'asse delle ordinate ha scala logaritmica.}
