commit di mezzo

--- a/E3(bis)/Latex/introduzione.tex
+++ b/E3(bis)/Latex/introduzione.tex
@@ -29,25 +29,15 @@ prestando attenzione che fossero rispettate le richieste dei tecnici di laborato
 ovvero che l'impianto soddisfacesse i seguenti requisiti:
 
 \begin{itemize}
-	\item{si deve poter isolare la pompa turbomolecolare dal resto dell'impianto per proteggerla da sbalzi di pressione;}
-	\item{si deve poter misurare la pressione nelle vicinanze della pompa turbomolecolare per tenerla sotto controllo ed evitare danni ad essa;}	
-	\item{si deve poter portare la camera da vuoto dalla pressione atmosferica ad una pressione bassa e viceversa, senza spegnere la pompa turbomolecolare per non sprecare tempo;}
-	\item{si deve poter misurare la pressione in camera con i diversi strumenti a nostra disposizione;}
+	\item{si doveva poter isolare la pompa turbomolecolare dal resto dell'impanto. In pratica si doveva realizzare un bypass dotato di valvola che collegava la pompa rotativa direttamente alla camera. In questo modo è stato possibile portare la camera a pressioni di qualche Pascal partendo da quella atmosferica. Quindi è stato creato un prevuoto che ha consentito di far funzionare la pompa turbomolecolare. Infatti questa tipologia di pompe può funzionare solo in regime molecolare;} %non mi piace ancora come è scritta...
+    %WTF temperatura? % temperatura atmosferica senza spegnere la pompa turbomolecolare (che tra l'altro ci mette parecchi minuti a fermarsi);}
+	\item{si doveva avere la possibilità di riportare la camera da vuoto alla pressione atmosferica senza spegnere
+    la pompa turbomolecolare;}
+    \item{si è prestata attenzione all'accensione e allo spegnimento del vacuometro a catodo caldo onde evitare
+    di bruciare il filamento. Tale vacuometro opera ad di sotto dei $10^{-4}$ \si{\pascal};}
 \end{itemize}
 
-Seguendo questi requisiti abbiamo realizzato uno schema su carta dell'impianto tenendo conto del materiale a nostra disposizione. Lo schema dell'impianto è riportato in Figura \ref{fig:schema}.
-
-\subsection{Funzionamento dell'impianto da vuoto}
-\paragraph{Creazione del prevuoto\\}
-Il prevuoto, necessario per avviare la pompa turbomolecolare, è stato ottenuto avviando semplicemente avviando la pompa rotativa, tenendo chiusa la sola valvola che collega direttamente la camera da vuoto e l'atmosfera.
-\paragraph{Rientro di aria a pressione atmosferica in camera\\}
-Per effettuare il rientro di aria in camera è necessario prima di tutto chiudere la valvola gate, in modo che la pompa turbomolecolare non subisca variazioni di pressione, lasciando che la pompa rotativa aspiri il fondo della turbo. Quindi basta aprire la valvola che collega la camera da vuoto con l'atmosfera
-\paragraph{Ritorno a bassa pressione della camera}
-Per ritornare 
-\paragraph{Vacuometro a catodo freddo\\}
-Si è prestata attenzione all'accensione e allo spegnimento
-\paragraph{Vacuometri a catodo caldo e a catodo freddo\\}
-Si è prestata attenzione all'accensione e allo spegnimento di tali vacuometri onde evitare di provocare danni. Il vacuometro a catodo caldo infatti deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si bruci il filamento al suo interno. Il vacuometro a catodo freddo invee deve operare al di sotto dei $10^{-4}$ affinché non si ossidi la superficie interna. % non ho idea di quello che sto dicendo (per il catodo freddo si intende...).
+Uno schema dell'impianto è riportato in figura \ref{fig:schema}.
 
 \subsection{Taratura dei vacuometri Pirani}
 
