--- a/E3(bis)/Latex/title.tex
+++ b/E3(bis)/Latex/title.tex
@@ -1,7 +1,7 @@
 \begin{center}
 
 	\vspace{0.5cm}
-     	{\huge Montaggio di un sistema da vuoto.}
+     	{\huge Iniziazione al montaggio di un sistema da vuoto.}
 	\vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
