devo pushare più spesso

--- a/E3/Latex/introduzione.tex
+++ b/E3/Latex/introduzione.tex
@@ -35,17 +35,15 @@ ovvero che l'impianto soddisfacesse i seguenti requisiti:
 	\item{si deve poter misurare la pressione in camera con i diversi strumenti a nostra disposizione;}
 \end{itemize}
 
-Seguendo questi requisiti abbiamo realizzato uno schema su carta dell'impianto tenendo conto del materiale a nostra disposizione. Lo schema dell'impianto è riportato in Figura \ref{fig:schema}.
+Seguendo questi requisiti abbiamo realizzato uno schema su carta dell'impianto tenendo conto del materiale a nostra disposizione. Dopo aver realizzato lo schema, abbiamo montato l'impianto facendo attenzione ad associare ad ogni flangia il corretto O-ring e a fissarli con la corretta cravatta chiudendola adeguatamente. Lo schema dell'impianto è riportato in Figura \ref{fig:schema}.
 
 \subsection{Funzionamento dell'impianto da vuoto}
 \paragraph{Creazione del prevuoto\\}
 Il prevuoto, necessario per avviare la pompa turbomolecolare, è stato ottenuto avviando semplicemente avviando la pompa rotativa, tenendo chiusa la sola valvola che collega direttamente la camera da vuoto e l'atmosfera.
 \paragraph{Rientro di aria a pressione atmosferica in camera\\}
 Per effettuare il rientro di aria in camera è necessario prima di tutto chiudere la valvola gate, in modo che la pompa turbomolecolare non subisca variazioni di pressione, lasciando che la pompa rotativa aspiri il fondo della turbo. Quindi basta aprire la valvola che collega la camera da vuoto con l'atmosfera
-\paragraph{Ritorno a bassa pressione della camera}
-Per ritornare 
-\paragraph{Vacuometro a catodo freddo\\}
-Si è prestata attenzione all'accensione e allo spegnimento
+\paragraph{Vuoto in camera con pompa turbomolecolare isolata\\} % non mi piace il titolo
+Per ritornare ad una bassa pressione in camera, dalla situazione descritta nel paragrafo precedente, è necessario chiudere la valvola a fondo della turbo per isolarla completamente. In seguito si deve aprire la valvola del bypass in modo tale da creare il vuoto in camera con la pompa rotativa. Una volta che la pressione segnalata da entrambi i vacuometri Pirani è uguale, si può aprire la valvola a fondo della pompa turbomolecolare e chiudere la valvola del bypass. Le operazioni fin qui descritte vanno eseguite con una certa lena per evitare che a fondo della pompa turbomolecolare si crei una zona con pressione troppo elevata. L'ultima operazione è quella di aprire lentamente la valvola gate, in modo da non sforzare la pompa turbomolecolare, per poi lasciare che l'impianto si riporti in condizione di vuoto limite. % assolutamente da rivedere
 \paragraph{Vacuometri a catodo caldo e a catodo freddo\\}
 Si è prestata attenzione all'accensione e allo spegnimento di tali vacuometri onde evitare di provocare danni. Il vacuometro a catodo caldo infatti deve operare al di sotto dei $10^{-4}$ \si{\pascal} affinché non si bruci il filamento al suo interno. Il vacuometro a catodo freddo invee deve operare al di sotto dei $10^{-4}$ affinché non si ossidi la superficie interna. % non ho idea di quello che sto dicendo (per il catodo freddo si intende...).
 
